Backend: Create token verification endpoint